# tech_test

./: .app.env.example  .db.env.example  .dockerignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: github-ci.yml
app/: main.py  routes.py
app/api/: dtos.py  use_cases.py
app/api/v1/: api.py
app/core/: db_config.py  init_app.py  settings.py
app/lib/: classes.py
docker/: Dockerfile  gunicorn_conf.py  start.sh
tests/: conftest.py
tests/genes/: test_api.py  test_use_cases.py
