[tool.poetry]
name = "embl-test"
version = "0.1.0"
description = ""
authors = ["gkorelsky"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
aiomysql = "^0.2.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
environs = "^9.5.0"
gunicorn = "^21.2.0"
orjson = "^3.9.7"
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
sqlalchemy = "^2.0.21"

[tool.taskipy.tasks]
isort = "isort app tests"
tests = "pytest tests/ -v"
black = "black app/ tests/"

isort-lint = "task isort -c"
black-lint = "task black --check"
mypy-lint = "mypy --install-types --non-interactive app/"
poetry-check = "poetry check"
pip-check = "pip check"

[tool.isort]
# isort configuration:
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
line_length = 120
known_first_party = "app"
default_section = "THIRDPARTY"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"


[tool.black]
line-length = 120
target-version = ['py311']
extend-exclude = '''
(
  /(
    # Exclude folders
    | app/migrations
  )/
  # Eclude files
)
'''
skip-string-normalization = true


[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = false
pretty = true
follow_imports = "silent"
follow_imports_for_stubs = true
show_error_codes = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

exclude = [
    'test_',
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "html.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.migrations.*"
ignore_errors = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
